<resources>
    <string name="app_name">Tiketku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="email_nomor_telepon">Email/Nomor Telepon</string>
    <string name="contoh_joendhoe_gmail_com">Contoh:joendhoe@gmail.com</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="masuk_btn">Masuk</string>
    <string name="reset_password">Reset Password</string>
    <string name="masukkan_password_baru">Masukkan Password Baru</string>
    <string name="btn_simpan">Simpan</string>
    <string name="masukkankota">Masukkan Kota atau Negara</string>
    <string name="jkt">Jakarta</string>
    <string name="bandung">Bandung</string>
    <string name="pencarian_terkini">Pencarian terkini</string>
    <string name="pilih">Pilih</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="total">Total</string>
    <string name="idr_4_950_000">IDR 4.950.000/pax</string>
    <string name="info">Jet Air - Economy\nJT - 203\n\nInformasi:\nBaggage 20 kg\nCabin baggage 7 kg\nIn Flight Entertainment
    </string>
</resources>