<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:padding="23dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/TextHeading24Bold"
        android:text="@string/masuk"
        android:layout_marginTop="83dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/TextBody12Medium"
        android:text="@string/email_nomor_telepon"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmailLogin"
        style="@style/EditText"
        android:layout_marginTop="10dp"
        android:hint="@string/contoh_joendhoe_gmail_com"
        android:background="@drawable/shape_rectangle"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextBody12Medium"
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtLupaPassword"
            style="@style/TextBody12Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/lupa_kata_sandi"
            android:textColor="@color/darkblue_04" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

<!--        <EditText-->
<!--            android:id="@+id/etPasswordLogin"-->
<!--            style="@style/EditText"-->
<!--            android:hint="@string/masukkan_password"-->
<!--            android:background="@drawable/shape_rectangle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="48dp"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:padding="10dp"
                android:background="@drawable/shape_rectangle"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        
    </FrameLayout>
    
    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonPrimary"
        android:backgroundTint="@color/darkblue_04"
        android:text="@string/masuk_btn"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_marginBottom="43dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/TextBody14Regular"
            android:text="Belum punya akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtDaftar"
            style="@style/TextBody14Bold"
            android:text="Daftar di sini"
            android:textColor="@color/darkblue_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>