<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="23dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginFragment">

    <TextView
        style="@style/TextHeading24Bold"
        android:text="@string/reset_password"
        android:layout_marginTop="83dp"
        android:textColor="@color/black"
        android:layout_width="195dp"
        android:layout_height="36dp"/>

    <TextView
        style="@style/TextBody12Regular"
        android:layout_width="201dp"
        android:layout_height="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/masukkan_password_baru"
        android:textColor="@color/black" />



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etMasukkanPass"
            style="@style/EditText"
            android:hint="@string/masukkan_password"
            android:background="@drawable/shape_rectangle"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <ImageView
            android:id="@+id/btnEye"
            android:src="@drawable/eye"
            android:layout_gravity="end"
            android:layout_marginVertical="12dp"
            android:layout_marginEnd="14dp"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

    </FrameLayout>



        <TextView
            style="@style/TextBody12Medium"
            android:layout_width="140dp"
            android:layout_height="18dp"
            android:text="Ulangi Password Baru"
            android:textColor="@color/black" />




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPasswordLogin"
            style="@style/EditText"
            android:hint="@string/masukkan_password"
            android:background="@drawable/shape_rectangle"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <ImageView
            android:id="@+id/btnEyes"
            android:src="@drawable/eye"
            android:layout_gravity="end"
            android:layout_marginVertical="12dp"
            android:layout_marginEnd="14dp"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

    </FrameLayout>

    <Button
        android:id="@+id/btnSimpan"
        style="@style/ButtonPrimary"
        android:backgroundTint="@color/darkblue_04"
        android:text="@string/btn_simpan"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>